add translation and continue add check

--- a/local/messages_de-CH.properties
+++ b/local/messages_de-CH.properties
@@ -1,1 +1,29 @@
-welcome.message=Gutten tag!
+# Commentaire : Texte de l'interface utilisateur
+welcome.message=Willkommen in unserer Anwendung
+signup.title=Konto erstellen
+signup.button=Anmelden
+login.title=Anmelden
+login.button=Anmelden
+logout.button=Abmelden
+
+# Commentaire : Messages d'erreur
+error.invalid.email=Ungültige E-Mail-Adresse
+error.invalid.password=Ungültiges Passwort
+error.password.match=Die Passwörter stimmen nicht überein
+error.username.taken=Dieser Benutzername ist bereits vergeben
+error.email.taken=Diese E-Mail-Adresse wird bereits verwendet
+
+# Commentaire : Messages de succès
+success.signup=Ihr Konto wurde erfolgreich erstellt
+success.login=Erfolgreiche Anmeldung
+success.logout=Erfolgreiche Abmeldung
+success.password.change=Passwort wurde erfolgreich geändert
+success.email.change=E-Mail-Adresse wurde erfolgreich geändert
+
+# Commentaire : Libellés de formulaire
+form.label.username=Benutzername
+form.label.email=E-Mail-Adresse
+form.label.password=Passwort
+form.label.confirm.password=Passwort bestätigen
+form.label.firstname=Vorname
+form.label.lastname=Nachname
