--- a/local/messages_en.properties
+++ b/local/messages_en.properties
@@ -1,2 +1,29 @@
-welcome.message=Hello, world!
-welcome.message.param=Hello {{name}} !
+# Commentaire : Texte de l'interface utilisateur
+welcome.message=Welcome to our application
+signup.title=Create an account
+signup.button=Sign up
+login.title=Log in
+login.button=Log in
+logout.button=Log out
+
+# Commentaire : Messages d'erreur
+error.invalid.email=Invalid email address
+error.invalid.password=Invalid password
+error.password.match=Passwords do not match
+error.username.taken=This username is already taken
+error.email.taken=This email address is already in use
+
+# Commentaire : Messages de succès
+success.signup=Your account has been successfully created
+success.login=Successful login
+success.logout=Successful logout
+success.password.change=Password changed successfully
+success.email.change=Email address changed successfully
+
+# Commentaire : Libellés de formulaire
+form.label.username=Username
+form.label.email=Email address
+form.label.password=Password
+form.label.confirm.password=Confirm password
+form.label.firstname=First name
+form.label.lastname=Last name
